cluster/apps/data/piped/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: piped
  namespace: data
  labels:
    app.kubernetes.io/instance: piped
    app.kubernetes.io/name: piped
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: piped
      app.kubernetes.io/name: piped
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: piped
        app.kubernetes.io/name: piped
    spec:
      containers:
        - image: 1337kavin/piped-fronted:latest
          imagePullPolicy: Always
          name: fronted
          ports:
            - containerPort: 8080
              name: piped-fronted
        - image: 1337kavin/ytproxy:latest
          imagePullPolicy: Always
          name: ytproxy
        - image: 1337kavin/piped:latest
          imagePullPolicy: Always
          name: piped
          volumeMounts:
            - name: config
              mountPath: /app/config.properties
              subPath: config.properties
        - image: varnish:7.1-alpine
          imagePullPolicy: IfNotPresent
          name: varnish
          volumeMounts:
            - name: config
              mountPath: /etc/varnish/default.vcl
              subPath: default.vcl
        - image: caddy:2-alpine
          imagePullPolicy: IfNotPresent
          name: caddy
          ports:
            - containerPort: 443
              name: https
      volumes:
        - name: config
          configMap:
            name: piped-config
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/probe: "true"
    prometheus.io/protocol: tcp
  labels:
    app.kubernetes.io/instance: piped
    app.kubernetes.io/name: piped
  name: piped
  namespace: data
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/instance: piped
    app.kubernetes.io/name: piped
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  # annotations:
    # traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
  labels:
    app.kubernetes.io/instance: piped
    app.kubernetes.io/name: piped
  name: piped
  namespace: data
spec:
  ingressClassName: "nginx"
  rules:
    - host: "piped.${SECRET_CLUSTER_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: piped
                port:
                  number: 8080
  tls:
    - hosts:
        - "piped.${SECRET_CLUSTER_DOMAIN}"
      secretName: "${SECRET_CLUSTER_CERTIFICATE_DEFAULT}"
